--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <title>Adv DevOps Lah-b</title>
+     <title>Adv DevOps Lab</title>
   </head>
   <body>
-	Sample applicationt show code pipeline
+	Sample application show code pipeline
   </body>
 </html>
